objects/LLC_BI__Risk_Grade_Factor__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Column_Number__c</fullName>
        <description>This field is optional. It is populated manually by the user. This field controls the sort order for risk grade factors in the risk grade group.</description>
        <label>Row_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <description>This field is optional. It is a roll-up field, and populated automatically by the highest value in the &quot;LLC_BI__High__c&quot; field on the Risk_Grade_Criteria__c object.</description>
        <label>Highest</label>
        <summarizedField>LLC_BI__Risk_Grade_Criteria__c.LLC_BI__High__c</summarizedField>
        <summaryForeignKey>LLC_BI__Risk_Grade_Criteria__c.LLC_BI__Risk_Grade_Factor__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Qualitative__c</fullName>
        <description>This field is hidden and it is a formula based on the value of the Type field. When the type is set to Qualitative, the value automatically evaluates to 1.</description>
        <formula>IF( ISPICKVAL(LLC_BI__Type__c, &apos;Qualitative&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Qualitative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Quantitative__c</fullName>
        <description>This field is hidden and it is a formula based on the value of the Type field. When the type is set to Quantitative, the value automatically evaluates to 1.</description>
        <formula>IF( ISPICKVAL(LLC_BI__Type__c, &apos;Quantitative&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Quantitative</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lowest__c</fullName>
        <description>This field is optional. It is a roll-up field, and populated automatically by the lowest value in the &quot;LLC_BI__Low__c&quot; field on the Risk_Grade_Criteria__c object.</description>
        <label>Lowest</label>
        <summarizedField>LLC_BI__Risk_Grade_Criteria__c.LLC_BI__Low__c</summarizedField>
        <summaryForeignKey>LLC_BI__Risk_Grade_Criteria__c.LLC_BI__Risk_Grade_Factor__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is only populated automatically if the user is creating the risk grade factor from the risk grade group  This field specifies the risk grade group associated with the risk grade factor. Whenever a factor is associated with a group, it is used to calculate that specific group&apos;s risk grade.</description>
        <label>Risk Grade Group</label>
        <referenceTo>LLC_BI__Risk_Grade_Group__c</referenceTo>
        <relationshipLabel>Risk Grade Factors</relationshipLabel>
        <relationshipName>Risk_Grade_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is only populated automatically if the user is creating the risk grade factor from the risk grade template.  This field specifies the risk grade template associated with the risk grade factor.</description>
        <label>Risk Grade Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Risk Grade Factors</relationshipLabel>
        <relationshipName>Risk_Grade_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is required. It must be manually populated. Qualitative results in a picklist displaying in the risk grade worksheet and utilizes values from the &quot;LLC_BI__Description__c&quot; (Qualitative Value) field on the Risk Grade Critieria object. Quantitative results in a text field displaying in the risk grade worksheet and utilizes values from the &quot;High__c&quot; and &quot;Low__c&quot; fields on the Risk Grade Criteria object.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantitative</fullName>
                    <default>true</default>
                    <label>Quantitative</label>
                </value>
                <value>
                    <fullName>Qualitative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Units__c</fullName>
        <description>This field is optional. It is populated manually by the user. For qualitative risk grade factors, this field is used to display a symbol in parenthesis on the row.</description>
        <inlineHelpText>The units of the risk grade factor. The symbol entered here will be displayed in parenthesis on the column.</inlineHelpText>
        <label>Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Weight__c</fullName>
        <description>This field is required. It must be manually populated with a percentage number lower than 1 (ex: .25). It is used to determine how much a particular risk grade factor contributes to a risk grade group (if the factor is associated to a group) or the calculated risk grade (if it does not). The weight across all risk grade factors for a group (if associated) or a risk grade template (if no group) should not exceed 1.</description>
        <label>Weight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Risk Grade Factor</label>
    <nameField>
        <label>Risk Grade Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Grade Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>